<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login1"
    android:gravity="center"
    tools:context=".activities.LoginScreen"
    >


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:src="@drawable/logo"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <AutoCompleteTextView
        android:id="@+id/email_login_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:gravity="center"
        android:textSize="25sp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
         style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_below="@id/profile_image"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24" />

    <EditText
        android:id="@+id/password_login_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_login_et"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="25sp"
        android:drawableLeft="@drawable/ic_baseline_fingerprint_24"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_fingerprint_24" />
    <CheckBox
        android:id="@+id/remember_me_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="Remember Me"
        android:textSize="25sp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/password_login_et"
        />

    <Button
        android:id="@+id/login_btn"
        style="@style/Widget.AppCompat.Button.Colored"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_login_et"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/login" />


    <TextView
        android:id="@+id/goto_signup_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:text="@string/make_new_account"
        android:textColor="#ffffff"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textStyle="italic"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp" />
</RelativeLayout>