<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupScreen"
    android:orientation="vertical"
    android:background="@drawable/login1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".CreateAccount"
            android:gravity="center"
            tools:ignore="UselessParent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="120dp"
                android:src="@drawable/logo"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:layout_marginStart="120dp" />
            <LinearLayout
                android:id="@+id/cnic_layout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/profile_image"
                android:weightSum="6"
                android:orientation="horizontal">

                <Button
                    android:onClick="selectCnicImage"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:text="Upload Profile Pic"
                    android:layout_marginTop="20dp"
                    android:textColor="#fff"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:textSize="10sp"
                    android:textStyle="normal"/>

                <ImageView
                    android:id="@+id/cnic_img"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"

                    android:src="@drawable/ic_baseline_person_24"

                    />


            </LinearLayout>

            <EditText
                android:id="@+id/email_signup_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cnic_layout"
                android:hint="@string/email"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                />
            <EditText
                android:id="@+id/first_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="25sp"
                android:layout_below="@id/email_signup_et"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:autofillHints=""
                android:drawableLeft="@drawable/ic_baseline_person_24"
                />
            <EditText
                android:id="@+id/last_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="25sp"
                android:layout_below="@+id/first_name_et"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:autofillHints=""
                 />
            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="25sp"
                android:layout_below="@+id/last_name_et"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="TextFields"
                android:drawableLeft="@drawable/ic_baseline_phone_24"/>
            <EditText
                android:id="@+id/password_signup_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"

                android:drawableLeft="@drawable/ic_baseline_fingerprint_24"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="25sp"
                android:layout_below="@id/phone_number_et"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:inputType="textPassword"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_baseline_fingerprint_24" />
            <EditText
                android:id="@+id/confirm_password_signup_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:drawableLeft="@drawable/ic_baseline_fingerprint_24"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="25sp"
                android:layout_below="@id/password_signup_et"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:inputType="textPassword"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_baseline_fingerprint_24" />
            <Button

                android:id="@+id/signup_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirm_password_signup_et"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:text="@string/signup"
                android:layout_alignParentRight="true" />
            <TextView

                android:textColor="#ffffff"
                android:textSize="17sp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textStyle="italic"
                android:id="@+id/goto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/signup_btn"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/goto_login"
                android:layout_alignParentRight="true" />
            <TextView

                android:textColor="#ffffff"
                android:textSize="17sp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/goto_login"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"

                android:layout_alignParentRight="true" />




        </RelativeLayout>
    </ScrollView>

</LinearLayout>